--- a/src/components/ShortsPCard/style.scss
+++ b/src/components/ShortsPCard/style.scss
@@ -13,6 +13,15 @@
     overflow: hidden;
   }
 }
+.ant-modal-body .short__info{
+ 
+  h3{
+    margin: 0 0 15px 0;
+  }
+  h4{
+    font-size: 16px;
+  }
+}
 
 .shorts_page_card {
   display: flex;
@@ -59,12 +68,19 @@
       }
 
       .sp_desc {
+        position: absolute;
+        bottom: 80px;
+        left: 10px;
+        z-index: 999;
+        display: flex;
+        flex-direction: column;
+        align-items: start;
         p {
-          position: absolute;
-          bottom: 80px;
-          left: 10px;
+          
+         
           color: white;
           font-size: 13px;
+          margin: 0 0 15px 0;
 
           button{
             background-color: transparent;
@@ -79,9 +95,8 @@
         }
 
         span {
-          position: absolute;
-          bottom: 80px;
-          left: 10px;
+          
+          
           color: white;
           background-color: #0087CC;
           font-size: 13px;
@@ -91,6 +106,7 @@
 
       }
     }
+    
 
     .shorts_page_content {
       position: absolute;
