--- a/src/layout/Header/style.scss
+++ b/src/layout/Header/style.scss
@@ -583,6 +583,10 @@ header {
       &.accept__call:hover{
         box-shadow: 0 0 5px 3px #51fb5c;
       }
+      .video__svg{
+        background-color: #51fb5c;
+        border-radius: 50%;
+      }
     }
   }
 
