add search microphone

--- a/src/layout/Categories/style.scss
+++ b/src/layout/Categories/style.scss
@@ -82,7 +82,7 @@
 @media (max-width:540px) {
   .b_categories{
     justify-content: flex-start;
-    padding: 20px 10px;
+    padding: 10px;
 
     .b_cat{
       padding-bottom: 15px !important;
