--- a/src/pages/ShortsP/style.scss
+++ b/src/pages/ShortsP/style.scss
@@ -37,7 +37,7 @@
         padding: 5px;
         color: #fff;
         position: absolute;
-        top: 0;
+        top: -10px;
         left: 0;
         z-index: 1111;
         border: 0;
