show your location and show map shorts

--- a/src/pages/Chat/style.scss
+++ b/src/pages/Chat/style.scss
@@ -783,7 +783,7 @@ button.back__top{
     background: transparent;
     border: 0;
     outline: 0;
-    margin: 85px 0 24px 0;
+    margin: 24px 0 0 0 ;
   }
   .hide__chats{
     display: none;
