--- a/src/layout/Header/components/Search/style.scss
+++ b/src/layout/Header/components/Search/style.scss
@@ -2,7 +2,9 @@ header {
 
   .search-wrapper {
     position: relative;
-    width: 400px !important;
+    width: 100% !important;
+    max-width: 500px;
+    margin-right: 15px;
   }
 
   .search {
@@ -20,8 +22,8 @@ header {
     }
 
     img {
-      width: 15px;
-      height: 15px;
+      width: 18px;
+      height: 18px;
     }
 
     .close_btn {
@@ -101,6 +103,7 @@ header {
   border-radius: 16px;
   border: 1px solid var(--Gray-400, #292929);
   display: flex;
+  width: 42px;
   padding: 12px;
   justify-content: center;
   align-items: center;
@@ -111,10 +114,8 @@ header {
   background-color: transparent;
   outline: none;
   height: 100%;
-  right: 2px;
-  border-right: none;
-  border-top: none;
-  border-bottom: none;
+  right: 0;
+  border: none;
 
   &:hover {
     border-radius: 16px;
@@ -131,7 +132,7 @@ header {
   .search-wrapper {
     position: relative;
     z-index: 55555;
-    width: 60%;
+    width: 45%;
     margin-left: auto;
 
     .search {
@@ -148,8 +149,8 @@ header {
       }
 
       img {
-        width: 15px;
-        height: 15px;
+        width: 18px;
+        height: 18px;
       }
 
       .close_btn {
@@ -255,47 +256,68 @@ header {
 
 }
 
-@media (max-width:1270px) {
-  .xl_header {
+// @media (max-width:1270px) {
+//   .xl_header {
+//     .search-wrapper {
+//       width: 300px !important;
+//     }
+//   }
+// }
+
+@media(max-width:1400px) {
+  header {
+
     .search-wrapper {
-      width: 300px !important;
+      margin-right: 4px;
+      .search{
+        height: 40px;
+      }
     }
-  }
+  
 }
-@media(max-width:992px){
-  .listening-modal{
+}
+@media(max-width:992px) {
+  .listening-modal {
     min-width: 450px;
-    .modal-title{
+
+    .modal-title {
       font-size: 18px;
     }
-    .modal-microphone{
+
+    .modal-microphone {
       width: 55px;
       margin: 40px auto 40px;
       height: 55px;
-      img{
+
+      img {
         width: auto;
       }
     }
 
   }
 }
+
 @media (max-width:576px) {
-  .listening-modal{
+  .listening-modal {
     min-width: 90%;
     padding: 20px;
-    .modal-title{
+
+    .modal-title {
       font-size: 16px;
     }
-    .modal-microphone{
+
+    .modal-microphone {
       width: 50px;
       height: 50px;
       margin: 30px auto 30px;
-      img{
+
+      img {
         width: auto;
       }
     }
 
   }
+
   .sm_header {
     .search-wrapper {
       width: 100% !important;
