--- a/src/pages/Home/components/FeaturedVideo/style.scss
+++ b/src/pages/Home/components/FeaturedVideo/style.scss
@@ -1,7 +1,6 @@
 .fVideo {
   width: 100% !important;
   // height: 59vh;
-  padding-bottom: 30px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -60,12 +59,30 @@
     }
   }
 }
+@media (max-width: 768px) {
+  .fVideo {
+    .swiper {
+     height: 250px !important;
+      .swiper-slide {
+        height: 250px !important;
+        img {
+          border-radius: 24px;
+        }
+      }
+    }
+  }
+}
 
 @media (max-width: 540px) {
   .fVideo {
     margin-top: 0px;
     .swiper {
-      height: 60vh !important;
+      // height: 60vh !important;
+      .swiper-slide {
+        img {
+          border-radius: 12px;
+        }
+      }
     }
   }
 }
