--- a/src/pages/ProductDetail/style.scss
+++ b/src/pages/ProductDetail/style.scss
@@ -3,6 +3,7 @@
   height: auto;
   padding: 10px;
   transform: translateY(-25px);
+
   .video_content {
     // width: 668px;
     // height: 408px;
@@ -46,6 +47,7 @@
         }
 
         &.paused {
+
           .price,
           .wp {
             top: 380px;
@@ -69,6 +71,7 @@
       display: flex;
       justify-content: space-between;
       align-items: flex-start;
+
       .viev_part {
         margin-top: -24px;
         padding-right: 10px;
@@ -76,9 +79,11 @@
         display: flex;
         justify-content: center;
         align-items: center;
-        img{
+
+        img {
           margin-right: 5px;
         }
+
         span {
           color: var(--Text-4, #a2a8b7);
           font-size: 16px;
@@ -87,6 +92,7 @@
           line-height: 20px;
         }
       }
+
       h4 {
         color: var(--Text-1, #f3f4f6);
         text-overflow: ellipsis;
@@ -133,6 +139,7 @@
 
       .video_bottom_right {
         gap: 10px;
+
         img {
           width: 20px;
           height: 20px;
@@ -165,6 +172,7 @@
 
       .video_bottom_left {
         gap: 10px;
+
         .heart {
           cursor: pointer;
 
@@ -631,55 +639,73 @@
 }
 
 
-.video__properties, .video__address{
+.video__properties,
+.video__address {
   color: #fff;
   background: #121216;
   padding: 10px;
   margin: 24px 0 20px 0;
   border-radius: 16px;
-  h4{
+
+  h4 {
     font-size: 20px;
+    margin-bottom: 10px;
   }
-  td{
+
+  td {
     border: 1px solid #373737;
     padding: 8px;
     text-transform: capitalize;
     width: 50%;
   }
 
-  p a{
+  p a {
     font-size: 16px;
     color: #fff;
   }
-  .mapboxgl-map{
-    
-    .mapboxgl-canvas-container{
+
+  .mapboxgl-map {
+
+    .mapboxgl-canvas-container {
       overflow: hidden;
 
-     canvas{
-      height: 100% !important;
-      border-radius: 16px;
-      overflow: hidden;
-     }
+      canvas {
+        height: 100% !important;
+        border-radius: 16px;
+        overflow: hidden;
+      }
     }
-   
-    .mapboxgl-ctrl{
+
+    .mapboxgl-ctrl {
       display: none;
     }
   }
 }
 
-.address__map{
+.address__map {
   display: flex;
   height: 250px;
 }
 
 
 @media (max-width: 485px) {
+
   .product_detail {
+    .video_content {
+      .write_comment {
+        .comments{
+          padding: 24px;
+        }
+      }
+    }
     .video_content_bottom {
       overflow-x: scroll !important;
+      padding-bottom: 15px;
       gap: 40px;
+
+      &::-webkit-scrollbar {
+        height: 2px;
+      }
     }
 
     .comment_footer {
@@ -688,6 +714,7 @@
       .like-btn {
         padding: 11px !important;
         border-radius: 10px;
+
         img {
           width: 17px !important;
           height: 17px !important;
@@ -697,6 +724,7 @@
       .replay-btn {
         padding: 11px !important;
         border-radius: 10px;
+
         img {
           width: 17px !important;
           height: 17px !important;
@@ -706,6 +734,7 @@
       .dot_btn {
         padding: 11px !important;
         border-radius: 10px;
+
         img {
           width: 17px !important;
           height: 17px !important;
@@ -715,6 +744,7 @@
       .drop_menu {
         button {
           padding: 11px !important;
+
           img {
             width: 17px !important;
             height: 17px !important;
@@ -723,6 +753,35 @@
       }
     }
   }
+
+  .video__properties,
+  .video__address {
+    padding: 0;
+
+    h4 {
+      font-size: 18px;
+      margin-bottom: 15px;
+    }
+  }
+.product_detail{
+.video_content{
+  .write_comment {
+    &.pt-5{
+      padding: 10px 0 !important;
+    }
+    .user_comment_post_area{
+    padding:20px  15px !important;
+  .user_img{
+    margin-right: 10px;
+    img{
+      width: 40px;
+      height: 40px;
+    }
+  }
+    }
+      }
+}
+}
 }
 
 @media (max-width: 820px) {
@@ -771,6 +830,7 @@
         }
 
         &.paused {
+
           .price,
           .wp {
             top: 250px !important;
@@ -792,8 +852,45 @@
 }
 
 @media (max-width: 540px) {
-  .product_detail {
-    .video_content {
+  .product_detail .video_content {
+    .video_content_bottom {
+      .video_bottom_right {
+        .like-btn {
+          border-radius: 12px;
+          padding: 10px;
+          height: 40px;
+          width: 40px;
+
+          img {
+            width: 18px;
+          }
+        }
+
+        span {
+          font-size: 14px;
+        }
+      }
+
+      .video_bottom_left {
+
+        .heart,
+        .add_basket,
+        .download-btn,
+        .lr-btn,
+        .share-btn {
+          border-radius: 12px;
+          padding: 10px;
+          height: 40px;
+          width: 40px;
+
+          img {
+            width: 18px;
+          }
+        }
+      }
+    }
+
+    .product_detail {
       .detail_video {
         height: 260px !important;
       }
@@ -815,7 +912,7 @@
           background-color: #0087cc;
           padding: 5px 25px;
           position: absolute;
-          top: 200px !important;
+          top: 270px !important;
           left: 20px;
           border-radius: 25px;
           transition: all 0.7s ease;
@@ -827,7 +924,7 @@
         .wp {
           position: absolute;
           right: 20px;
-          top: 200px !important;
+          top: 270px !important;
           transition: all 0.7s ease;
 
           img {
@@ -837,6 +934,7 @@
         }
 
         &.paused {
+
           .price,
           .wp {
             top: 150px !important;
